[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "guardops"
version = "0.1.0"
description = "Runtime guardrails for multi-agent workflows"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langfuse",
    "mlflow",
    "python-dotenv",
    "opentelemetry-api",
    "pydantic"
]

[tool.setuptools]
packages = ["guardops"]